[package]
name = "libcplusplus"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joseph R. Quinn"]
description = "A no_std reimplementation of LLVM's libc++ in Rust with ABI-compatible C++ standard library types and a built-in memory sanitizer"
repository = "https://github.com/pegasusheavy/libcplusplus"
keywords = ["libc++", "cpp", "ffi", "no-std", "sanitizer"]
categories = ["no-std", "external-ffi-bindings"]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []
sanitize = []

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
